--- a/#src/index.html
+++ b/#src/index.html
@@ -11,8 +11,9 @@
     @@include('_header.html')
     <main class="main">
         <h1>gulp+==</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum corrupti beatae assumenda sequi similique nisi quaerat nihil, veniam perspiciatis amet illo natus eaque eius debitis molestiae! Ea ab nulla dolores.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum corrupti beatae assumenda sequi similique nisi quaerat nihil, veniam perspiciatis amet illo natus eaque eius debitis molestiae! Ea ab nulla</p>
     </main>
+    @@include('_footer.html')
     <script src="js/script.min.js"></script>
 </body>
 </html>
